Design take off

--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:HCI2018PZ4._3EURA78_2015"
              StartupUri="MainWindow.xaml" ShutdownMode="OnMainWindowClose">
     <Application.Resources>
-        
+        <ResourceDictionary >
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Button.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
