--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,44 +6,145 @@
         xmlns:local="clr-namespace:HCI2018PZ4._3EURA78_2015"
         mc:Ignorable="d"
         Title="Mapa ugroženih vrsta sveta" Height="576" Width="1024">
+    
+
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="14*"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="4*"/>
-                <ColumnDefinition Width="6*"/>
-            </Grid.ColumnDefinitions>
-
-            <Grid Grid.Column="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="79*"/>
+            <ColumnDefinition Width="21*"/>
+        </Grid.ColumnDefinitions>
 
 
+        <Border BorderBrush="Black" BorderThickness="0 0 5 0">
+            <Grid Grid.Column="0" Background="#170825">
+                <Canvas Name="canvasMapa" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" AllowDrop="True" DragEnter="canvasMapa_DragEnter" Drop="canvasMapa_Drop" MouseLeftButtonDown="canvasMapa_MouseLeftButtonDown" MouseMove="canvasMapa_MouseMove" MouseRightButtonDown="canvasMapa_MouseRightButtonDown" >
+                    <Canvas.Background>
+                        <ImageBrush x:Name="mapaImg" />
 
-                </Grid.ColumnDefinitions>
 
-                <Button x:Name="Vrsta" Click="Vrsta_Click" Grid.Column="0" Content="Dodaj vrstu" Margin="5 5 2.5 5"/>
-                <Button x:Name="Tip" Click="Tip_Click" Grid.Column="1" Content="Dodaj tip" Margin="2.5 5 2.5 5" />
-                <Button x:Name="Etiketa" Click="Etiketa_Click" Grid.Column="2" Content="Dodaj etiketu" Margin="2.5 5 2.5 5" />
-                <Button x:Name="Save" Click="Save_Click" Grid.Column="3" Content="Sačuvaj" Margin="2.5 5 2.5 5" />
-                <Button x:Name="Open" Click="Open_Click" Grid.Column="4" Content="Učitaj" Margin="2.5 5 5 5" />
-                <Button x:Name="VrstaLisa" Click="VrstaLisa_Click" Grid.Column="5" Content="Vrste" Margin="2.5 5 2.5 5" />
-                <Button x:Name="TipLista"  Click="TipLista_Click" Grid.Column="6" Content="Tipovi" Margin="2.5 5 2.5 5" />
-                <Button x:Name="EtiketaLista" Click="EtiketaLista_Click" Grid.Column="7" Content="Etikete" Margin="2.5 5 5 5" />
+                    </Canvas.Background> 
+                </Canvas>
+                    
 
             </Grid>
+        </Border>
+        
+       
+        <Grid Grid.Column="1" >
+            <Grid>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="90"/>
+                    <RowDefinition/>
+                    <RowDefinition Height="30"/>
+
+                </Grid.RowDefinitions>
+                
+                <!-- TOP PANEL (Vrsta, tip, etiketa) -->
+                <Grid Grid.Row="0" Background="#251e08">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="55*"/>
+                            <ColumnDefinition Width="45*"/>
+                        </Grid.ColumnDefinitions>
+
+
+
+                        <Grid Grid.Column="0" >
+                            <Grid Height="75">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="38"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+
+                                <Grid.RowDefinitions>
+                                    <RowDefinition />
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+
+                                <Button x:Name="addVrsta" Click="Vrsta_Click"  Grid.Column="0" Grid.Row="0" Style="{StaticResource AddButton}" Margin="9 2 0 0" HorizontalAlignment="Left"/>
+                                <Button x:Name="addTip" Click="Tip_Click"  Grid.Column="0" Grid.Row="1" Style="{StaticResource AddButton}"  Margin="9 2 0 0" HorizontalAlignment="Left"/>
+                                <Button x:Name="addEtiketa" Click="Etiketa_Click"  Grid.Column="0" Grid.Row="2" Style="{StaticResource AddButton}"  Margin="9 2 0 0" HorizontalAlignment="Left"/>
+
+                                <!--<TextBlock Grid.Column="1" Grid.Row="0" FontSize="18" Margin="0 0 0 2" FontWeight="Bold" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center">Vrsta</TextBlock>-->
+                                <Button x:Name="addTextVrsta" Click="Vrsta_Click" Grid.Column="1" Grid.Row="0" Style="{StaticResource AddText}"     Content="Vrsta"/>
+                                <Button x:Name="addTextTip" Click="Tip_Click" Grid.Column="1" Grid.Row="1" Style="{StaticResource AddText}"         Content="Tip"/>
+                                <Button x:Name="addTextEtiketa" Click="Etiketa_Click" Grid.Column="1" Grid.Row="2" Style="{StaticResource AddText}" Content="Etiketa"/>
+                                
+                            </Grid>
+                         </Grid>
+                        <Grid Grid.Column="1">
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <Button x:Name="btnSave"  Click="Save_Click" Margin="0 0 0 0" Style="{StaticResource SaveButton}"></Button>
+                                <Button x:Name="btnOpen" Click="Open_Click" Margin="5 0 0 0" Style="{StaticResource OpenButton}"></Button>
+
+
+                            </StackPanel>
+                        </Grid>
+
+                    </Grid>
+                </Grid>
+
+                <!-- MID PANEL (Lista vrsti) -->
+                <Grid Grid.Row="1" >
+
+
+
+
+
+                    <ListView  Name="vrsteLista" ItemsSource="{Binding Path=Vrste}" 
+                             PreviewMouseLeftButtonDown="vrsteLista_PreviewMouseLeftButtonDown"
+                             MouseMove="vrsteLista_MouseMove" >
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <WrapPanel VerticalAlignment="Center">
+                                    <Image Height="22" Width="22" Source="{Binding Ikonica}" />
+                                    <TextBlock Text=" [" />
+                                    <TextBlock Text="{Binding Id}" />
+                                    <TextBlock Text="]" />
+                                    <TextBlock Text=" " />
+                                    <TextBlock Text="{Binding Naziv}" FontWeight="SemiBold"/>
+                                </WrapPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+
+
+
+
+
+                </Grid>
+                
+                
+                
+                <!-- BOTTOM PANEL (Buttons) -->
+                <Grid Grid.Row="2" Background="#08251e">
+                    <Grid.ColumnDefinitions>
+                        
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+
+
+
+                    </Grid.ColumnDefinitions>
+
+                    <Button x:Name="VrstaLisa" Click="VrstaLisa_Click" Grid.Column="0" Content="Vrste" Style="{StaticResource Liste}"/>
+                    <Button x:Name="TipLista"  Click="TipLista_Click" Grid.Column="1" Content="Tipovi" Style="{StaticResource Liste}" />
+                    <Button x:Name="EtiketaLista" Click="EtiketaLista_Click" Grid.Column="3" Content="Etikete"  Style="{StaticResource Liste}" />
+
+                </Grid>
+            </Grid>
         </Grid>
+
+
     </Grid>
 
 
