--- a/Tabele/ListaVrste.xaml
+++ b/Tabele/ListaVrste.xaml
@@ -31,7 +31,7 @@
                     <DataGridTemplateColumn Header="Ikonica">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Image Source="{Binding Tip.Ikonica}" Height="22" Width="22"/>
+                                <Image Source="{Binding Ikonica}" Height="22" Width="22"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
