--- a/Dijalozi/TipDialog.xaml
+++ b/Dijalozi/TipDialog.xaml
@@ -16,7 +16,7 @@
             <Grid Grid.Row="0">
                 <StackPanel>
                     <TextBlock FontWeight="Bold">Oznaka tipa:</TextBlock>
-                    <TextBox Text="{Binding Path=Id}" Padding="2" Margin="0 2 0 0"></TextBox>
+                    <TextBox Name="id" Text="{Binding Path=Id}" Padding="2" Margin="0 2 0 0"></TextBox>
 
                     <TextBlock Margin="0 5 0 0">Naziv:</TextBlock>
                     <TextBox Text="{Binding Path=Naziv}" Padding="2" Margin="0 2 0 0"></TextBox>
